--- a/sub/assets/css/sub.css
+++ b/sub/assets/css/sub.css
@@ -149,6 +149,10 @@ ul{list-style: none;}
 }
 
 @media screen and (max-width: 767px){
+  .intro{
+    margin-top: 80px;
+  } 
+
   .intro_list .list{
     width: 100%;
   }
