--- a/sub/assets/css/sub_common.css
+++ b/sub/assets/css/sub_common.css
@@ -1,4 +1,4 @@
-.inner_container{
+.inner_container          {
   max-width: 1680px;
   margin: 0 auto;
   padding: 0 32px;
@@ -7,9 +7,10 @@
 h1.main_tit{
   font-size: 64px;
   font-weight: 700;
+  color: #fff;
 }
 
-h1.sec_tit{
+h2.sec_tit{
   font-size: 60px;
   font-weight: 500;
 }
@@ -17,6 +18,7 @@ h1.sec_tit{
 p.main_sub_tit{
   font-size: 22px;
   font-weight: 500;
+  color: #fff;
 }
 
 p.sec_sub_tit{
