--- a/sub/assets/css/sub.css
+++ b/sub/assets/css/sub.css
@@ -159,3 +159,24 @@ ul{list-style: none;}
 }
 
 /* 여기부터 인사말 */
+
+.creative_main_banner{
+  background-image: url(../images/main2.png);
+  background-size: cover;
+  padding-bottom: 200px;
+  position: relative;
+}
+
+.creative_main_banner::after{
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(68, 68, 68, 0.3);
+}
+
+.cre_main_tit{
+  padding-top: 110px;
+}
