--- a/sub/assets/css/sub_common.css
+++ b/sub/assets/css/sub_common.css
@@ -9,6 +9,15 @@ h1.main_tit{
   font-weight: 700;
   color: #fff;
   text-align: center;
+  padding-top: 200px;
+}
+
+h1.s_main_tit{
+  font-size: 64px;
+  font-weight: 700;
+  color: #fff;
+  text-align: center;
+  padding-top: 110px;
 }
 
 h2.sec_tit{
@@ -16,11 +25,13 @@ h2.sec_tit{
   font-weight: 500;
 }
 
+
 p.main_sub_tit{
   font-size: 22px;
   font-weight: 500;
   color: #fff;
   text-align: center;
+  margin-top: 27px;
 }
 
 p.sec_sub_tit{
