--- a/sub/assets/css/sub_common.css
+++ b/sub/assets/css/sub_common.css
@@ -43,10 +43,26 @@ p.sec_sub_tit{
   h1.main_tit{
   font-size: 42px;
   font-weight: 700;
-}
+  }
+
+  h1.s_main_tit{
+  font-size: 42px;
+  font-weight: 700;
+  }
 
 p.main_sub_tit{
   font-size: 14px;
   font-weight: 500;
+  }
 }
+
+@media screen and (max-width: 767px){
+  h1.main_tit{
+  font-size: 28px;
+  }
+
+  h1.s_main_tit{
+  font-size: 28px;
+  }
+
 }
