--- a/sub/assets/css/sub_common.css
+++ b/sub/assets/css/sub_common.css
@@ -73,3 +73,15 @@ p.desc{
   font-size: 28px;
   }
 }
+
+/* footer */
+footer {
+  text-align: center;
+  padding: 30px 0;
+  background-color: #D9D9D9;
+  margin-top: 100px;
+}
+
+footer .inner_container p {
+  margin-bottom: 0;
+}
