--- a/onepage/assets/css/common.css
+++ b/onepage/assets/css/common.css
@@ -6,6 +6,12 @@
 
 html, body {
   font-family: 'NanumSquareRound',sans-serif;
+  overflow-x: hidden;
+  position: relative;
+}
+
+body.noScroll {
+  overflow-y: hidden !important;
 }
 
 ul, li {
