--- a/onepage/assets/css/style.css
+++ b/onepage/assets/css/style.css
@@ -1,7 +1,13 @@
 /* 메인 메뉴 */
+body {
+  position: relative;
+}
+
 .main_menu {
   text-align: center;
   padding: 30px 0;
+  position: relative;
+  font-size: 20px;
 }
 
 .main_menu .menu_gnb {
@@ -61,15 +67,15 @@
   }
 }
 
-
 /* 메인 비주얼 영역 */
-.main_visual__section {
-  background: url("../../assets/images/visual_img.png") no-repeat;
-  padding: 159px 0 468px;
+.main_txt_position {
+  background: url("../../assets/images/visual_img.png");
   background-repeat: repeat;
   background-position: center;
-}
+  background-size: cover;
+  padding: 159px 0 468px;
 
+}
 .main_visual__section .main_title {
   line-height: 1.3;
   margin-bottom: 15px;
@@ -169,6 +175,8 @@
 
 .kindergarden__program .program_list {
   background: url("./../images/program_img.png") no-repeat;
+  background-size: cover;
+  background-position: center;
   padding: 208px 0 226px;
 }
 
@@ -176,16 +184,21 @@
   justify-content: space-between;
 }
 
-.kindergarden__program .program_list .col-md-3 {
+.col-xl-3.col-md-6.col-sm-12.bg {
   background-color: rgba(255, 255, 255,0.8);
   text-align: center;
   width: calc(25% - 10px);
   border-radius: 10px;
-  padding: 40px 60px;
+  padding: 40px 20px;
 }
 
-.kindergarden__program .program_list .col-md-3 .sec_title {
+.kindergarden__program .program_list .bg .sec_title {
+  font-size: 28px;
   margin-bottom: 48px;
+}
+
+.kindergarden__program .program_list .bg .sub_title {
+  font-size: 20px;
 }
 
 /* 원생활 영역 */
@@ -284,6 +297,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: 16px;
   }
 
   #ghost_menu {
@@ -334,16 +348,46 @@
     transform: translateY(-50%) rotate(-45deg);
   }
 
-  /* 메인 비주얼 영역 */
-  .main_visual__section {
-    background: url("../../assets/images/visual_img.png") no-repeat;
-    background-size: cover;
-    padding: 159px 0 468px;
-    width: 100vw;
+  .main_menu .ghost_list {
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    position: absolute;
+    right: -320px;
+    top: 64px;
+    width: 300px;
+    height: calc(100vh - 44px);
+    z-index: 1;
+    transition: all 0.5s;
   }
 
-  .main_visual__section .main_title {
-    line-height: 1.3;
-    margin-bottom: 15px;
+  .main_menu .ghost_list ul {
+    margin-top: 100px;
   }
+
+  .main_menu .ghost_list ul li {
+    margin-bottom: 10px;
+  }
+
+  /* 메인 비주얼 영역 */
+
+  .kindergarden__program .program_list .row .col-sm-6 {
+    width: 0%;
+  }
+
+  .col-xl-3.col-md-6.col-sm-12.bg {
+    width: calc(50% - 10px);
+    margin-bottom: 20px;
+  }
+
+}
+
+@media screen and (max-width: 767px) {
+  .kindergarden__program .program_list {
+    padding: 100px;
+  }
+  .col-xl-3.col-md-6.col-sm-12.bg {
+    width: 100%;
+  }
+
 }
