--- a/sub/assets/css/sub_common.css
+++ b/sub/assets/css/sub_common.css
@@ -1,3 +1,11 @@
+*{margin: 0; padding: 0;}
+ul, li{list-style: none;}
+a{text-decoration: none; color: #000;}
+
+html, body {
+  font-family: 'NanumSquareRound',sans-serif;
+}
+
 .inner_container {
   max-width: 1680px;
   margin: 0 auto;
@@ -74,6 +82,158 @@ p.desc{
   }
 }
 
+/* header */
+.main_menu {
+  text-align: center;
+  padding: 30px 0;
+  position: relative;
+  font-size: 20px;
+}
+
+.main_menu .menu_gnb {
+  display: flex;
+  justify-content: center;
+}
+
+.main_menu .tab_menu {
+  display: none;
+}
+
+.main_menu .ghost_list {
+  display: none;
+}
+
+.main_menu .menu_gnb li {
+  margin-right: 70px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.main_menu .menu_gnb li:last-child {
+  margin-right: 0;
+}
+
+.main_menu .menu_gnb li a {
+  position: relative;
+}
+
+.main_menu .menu_gnb li a:hover {
+  color: #EFC12D;
+  transition: all 0.5s;
+}
+
+.main_menu .menu_gnb li a:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  height: 2px;
+  background-color: #EFC12D;
+}
+
+.main_menu .menu_gnb li a:hover::after {
+  animation: underline 0.5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes underline {
+  0% {
+    left: 50%;
+    width: 0%;
+  }
+
+  100% {
+    left: 0%;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width:1023px) {
+  /* 메인 메뉴 */
+  .main_menu {
+    padding: 20px 0;
+  }
+  
+  .main_menu .menu_gnb {
+    display: none;
+  }
+
+  .main_menu .tab_menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+  }
+
+  #ghost_menu {
+    display: none;
+  }
+  
+  #ghost_menu + label {
+    display: block;
+    width: 20px;
+    height: 18px;
+    cursor: pointer;
+    position: relative;
+  }
+
+  label span {
+    display: block;
+    height: 1px;
+    width: 100%;
+    background: black;
+    position: absolute;
+    transition: 0.3s;
+  }
+
+  label span:first-child {
+    top: 0;
+  }
+
+  label span:nth-child(2) {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  label span:last-child {
+    bottom: 0;
+  }
+
+  input:checked + label span:first-child {
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg);
+  }
+
+  input:checked + label span:nth-child(2) {
+    display: none;
+  }
+
+  input:checked + label span:last-child {
+    top: 50%;
+    transform: translateY(-50%) rotate(-45deg);
+  }
+
+  .main_menu .ghost_list {
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    position: absolute;
+    right: -320px;
+    top: 64px;
+    width: 300px;
+    height: calc(100vh - 44px);
+    z-index: 1;
+    transition: all 0.5s;
+  }
+
+  .main_menu .ghost_list ul {
+    margin-top: 100px;
+  }
+
+  .main_menu .ghost_list ul li {
+    margin-bottom: 10px;
+  }
+}
+
 /* footer */
 footer {
   text-align: center;
@@ -84,4 +244,49 @@ footer {
 
 footer .inner_container p {
   margin-bottom: 0;
+}
+
+@font-face {
+  font-family: "NanumSquareRound";
+  font-style: normal;
+  font-weight: 300;
+  src: local("NanumSquareRoundL"), /* computer */
+    url("NanumSquareRoundL.eot"), /* IE9 Compat Modes */
+    url("NanumSquareRoundL.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("NanumSquareRoundL.woff2") format("woff2"), /* Modern Browsers */
+    url("NanumSquareRoundL.woff") format("woff"), /* Modern Browsers */
+    url("NanumSquareRoundL.ttf") format("truetype"); /* Safari, Android, iOS */
+}
+@font-face {
+  font-family: "NanumSquareRound";
+  font-style: normal;
+  font-weight: 400;
+  src: local("NanumSquareRoundR"), /* computer */
+    url("NanumSquareRoundR.eot"), /* IE9 Compat Modes */
+    url("NanumSquareRoundR.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("NanumSquareRoundR.woff2") format("woff2"), /* Modern Browsers */    
+    url("NanumSquareRoundR.woff") format("woff"), /* Modern Browsers */
+    url("NanumSquareRoundR.ttf") format("truetype"); /* Safari, Android, iOS */
+}
+@font-face {
+  font-family: "NanumSquareRound";
+  font-style: normal;
+  font-weight: 700;
+  src: local("NanumSquareRoundB"), /* computer */
+    url("NanumSquareRoundB.eot"), /* IE9 Compat Modes */
+    url("NanumSquareRoundB.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("NanumSquareRoundB.woff2") format("woff2"), /* Modern Browsers */
+    url("NanumSquareRoundB.woff") format("woff"), /* Modern Browsers */
+    url("NanumSquareRoundB.ttf") format("truetype"); /* Safari, Android, iOS */
+}
+@font-face {
+  font-family: "NanumSquareRound";
+  font-style: normal;
+  font-weight: 800;
+  src: local("NanumSquareRoundEB"), /* computer */
+    url("NanumSquareRoundEB.eot"), /* IE9 Compat Modes */
+    url("NanumSquareRoundEB.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("NanumSquareRoundEB.woff2") format("woff2"), /* Modern Browsers */
+    url("NanumSquareRoundEB.woff") format("woff"), /* Modern Browsers */
+    url("NanumSquareRoundEB.ttf") format("truetype"); /* Safari, Android, iOS */
 }
