--- a/onepage/assets/css/style.css
+++ b/onepage/assets/css/style.css
@@ -68,17 +68,35 @@ body {
 }
 
 /* 메인 비주얼 영역 */
-.main_txt_position {
-  background: url("../../assets/images/visual_img.png");
-  background-repeat: repeat;
-  background-position: center;
-  background-size: cover;
-  padding: 159px 0 468px;
-
+.mySwiper {
+  position: relative;
 }
+
 .main_visual__section .main_title {
   line-height: 1.3;
   margin-bottom: 15px;
+}
+
+.mySwiper .main_txt_position {
+  position: absolute;
+  top: 160px;
+  z-index: 1;
+  width: 100%;
+  color: white;
+}
+
+.mySwiper .swiper-slide {
+  position: relative;
+}
+
+.mySwiper .swiper-slide:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0.5);
 }
 
 /* 입학안내 영역 */
@@ -182,6 +200,8 @@ body {
 
 .kindergarden__program .program_list .row {
   justify-content: space-between;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .col-xl-3.col-md-6.col-sm-12.bg {
@@ -259,7 +279,7 @@ body {
 
 /* 오시는길 영역 */
 .kindergarden__address .text_posiiton {
-  margin-bottom: 130px;
+  margin-bottom: 90px;
 }
 
 .kindergarden__address .icon_txt {
@@ -370,24 +390,149 @@ body {
   }
 
   /* 메인 비주얼 영역 */
+  .main_visual__section .main_title {
+    font-size: 34px;
+  }
+
+  .kindergarden__enterance .kindergarden__text__title {
+    margin-bottom: 50px;
+  }
+
+  .kindergarden__facility .text_posiiton {
+    margin-bottom: 50px;
+  }
+
+  .kindergarden__facility .container-fluid .sec-col .sec_title {
+    margin-bottom: 20px;
+  }
+
+  .kindergarden__facility .container-fluid .sec-col {
+    padding-left: 16px;
+  }
+
+  .kindergarden__program .text_posiiton {
+    margin-bottom: 50px;
+  }
+
+  .kindergarden__program .program_list {
+    padding: 120px 0;
+  }
+
+  .kindergarden__program .program_list .bg .sec_title {
+    margin-bottom: 24px;
+  }
 
   .kindergarden__program .program_list .row .col-sm-6 {
     width: 0%;
   }
-
+  
   .col-xl-3.col-md-6.col-sm-12.bg {
     width: calc(50% - 10px);
+    margin-bottom: 20px;
+  }
+
+  .kindergarden__life .container-fluid .life_txt_box .life_title {
+    font-size: 20px;
+    margin-bottom: 16px;
+  }
+
+  .kindergarden__life .container-fluid .life_txt_box .life_desc {
+    font-size: 16px;
+  }
+
+  .kindergarden__life .text_posiiton {
+    margin-bottom: 50px;
+  }
+
+  .kindergarden__address .text_posiiton {
+    margin-bottom: 50px;
+  }
+
+  .kindergarden__address .container-fluid .text-position h2.sec_title {
     margin-bottom: 20px;
   }
 
 }
 
 @media screen and (max-width: 767px) {
+  .main_visual__section .main_title {
+    font-size: 26px;
+  }
+
+  .main_txt_position {
+    padding: 200px 0 468px;
+  }
+
+  .kindergarden__enterance .kindergarden__content .col-lg-4.col-sm-12{
+    margin-bottom: 20px;
+  }
+
+  .kindergarden__enterance .icon_txt {
+    margin: 8px 0 10px;
+  }
+
+  .kindergarden__facility .text_posiiton {
+    margin-bottom: 36px;
+  }
+
   .kindergarden__program .program_list {
-    padding: 100px;
+    padding: 80px 0;
+  }
+  
+  .kindergarden__program .program_list .bg .sec_title {
+    font-size: 26px;
+  }
+
+  .kindergarden__program .program_list .bg .sub_title {
+    font-size: 18px;
+  }
+
+  .kindergarden__life .text_posiiton {
+    margin-bottom: 36px;
+  }
+
+  .kindergarden__life .container-fluid .col-lg-4.col-md-4.col-sm-12 {
+    margin-bottom: 30px;
+  }
+
+  .kindergarden__life .container-fluid figure:before {
+    width: 1px;
+    height: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -30px;
+    background-color: #EFC12D;
+  }
+
+  .kindergarden__life .container-fluid figure:after {
+    width: 15px;
+    height: 15px;
+    bottom: -38px;
+    background-color: #EFC12D;
+  }
+
+  .kindergarden__life .container-fluid figure {
+    margin-bottom: 46px;
+  }
+
+  .kindergarden__facility .container-fluid .first_col {
+    margin-bottom: 20px;
+  }
+
+  .kindergarden__life .container-fluid .life_txt_box .life_title {
+    margin-bottom: 10px;
   }
   .col-xl-3.col-md-6.col-sm-12.bg {
     width: 100%;
   }
+
+  .kindergarden__address .container-fluid .ad_first_col {
+    margin-bottom: 30px;
+  }
+
+  .kindergarden__address .text_posiiton {
+    margin-bottom: 36px;
+  }
+
 
 }
