--- a/onepage/assets/css/common.css
+++ b/onepage/assets/css/common.css
@@ -8,6 +8,11 @@ html, body {
   font-family: 'NanumSquareRound',sans-serif;
   overflow-x: hidden;
   position: relative;
+  scroll-behavior: smooth;
+  -webkit-scroll-behavior: smooth;
+  -moz-scroll-behavior: smooth;
+  -ms-scroll-behavior: smooth;
+  -o-scroll-behavior: smooth;
 }
 
 body.noScroll {
