--- a/sub/assets/css/sub.css
+++ b/sub/assets/css/sub.css
@@ -4,6 +4,10 @@
   overflow: hidden;
 }
 
+.swiper{
+  height: calc(100vh - 106px);
+}
+
 .swiper-slide{
   position: relative;
 }
@@ -20,6 +24,8 @@
 
 .swiper-slide img{
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .intro_text_box{
@@ -29,7 +35,8 @@
   transform: translate(-50%, -50%);
   text-align: center;
   color: #fff;
-  z-index: 10;
+  z-index: 100;
+  width: 100%;
 }
 
 .intro_main_tit{
@@ -204,6 +211,7 @@
 
 
 @media screen and (max-width: 767px){
+  
   .intro{
     margin-top: 80px;
   } 
@@ -211,9 +219,11 @@
   .intro_list .list{
     width: 100%;
   }
-  .intro_list .img_txt{
-    font-size: 48px;
+  
+  .intro_main_tit{
+    font-size: 28px;
   }
+
 }
 
 /* 여기부터 인사말 */
@@ -269,7 +279,8 @@
   }
 
   p.creative_s_txt{
-  font-size: 14px;
+  margin-top: 20px;
+  font-size: 16px;
   }
 }
 
@@ -278,6 +289,11 @@
     padding-top: 80px;
     padding-bottom: 40px;
   }
+
+  p.creative_s_txt{
+  margin-top: 20px;
+  font-size: 14px;
+  }
 }
 
 @media screen and (max-width: 767px){
@@ -285,6 +301,9 @@
     margin-top: 40px;
   }
 
+  h2.sec_tit {
+  font-size: 35px;
+  }
 }
 
 /* 여기부터 아카데미센터 */
