--- a/sub/assets/css/sub.css
+++ b/sub/assets/css/sub.css
@@ -160,6 +160,10 @@
 
 
 @media screen and (max-width: 1023px){
+  .swiper{
+    height: calc(100vh - 80px);
+  }
+
   .intro .col-md-6{
     width: 100%;
   }
@@ -215,7 +219,10 @@
 
 
 @media screen and (max-width: 767px){
-  
+  .swiper{
+    height: calc(100vh - 80px);
+  }
+
   .intro{
     margin-top: 80px;
   } 
