--- a/sub/sub_ver2/assets/css/sub.css
+++ b/sub/sub_ver2/assets/css/sub.css
@@ -160,6 +160,14 @@
 
 
 @media screen and (max-width: 1023px){
+  .swiper{
+    height: calc(100vh - 80px);
+  }
+
+  .intro .col-md-6{
+    width: 100%;
+  }
+
   .intro_main_tit{
     font-size: 42px;
   }
@@ -211,7 +219,10 @@
 
 
 @media screen and (max-width: 767px){
-  
+  .swiper{
+    height: calc(100vh - 80px);
+  }
+
   .intro{
     margin-top: 80px;
   } 
@@ -301,6 +312,9 @@
     margin-top: 40px;
   }
 
+  h2.sec_tit {
+  font-size: 35px;
+  }
 }
 
 /* 여기부터 아카데미센터 */
@@ -442,7 +456,13 @@
   height: 240px;
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (min-width: 1024px) and (max-width: 1200px){
+  p.desc{
+    font-size: 17px;
+  }
+}
+
+@media screen and (max-width: 1023px){
   .center_btn{
     padding-top: 70px;
     padding-bottom: 40px;
@@ -462,6 +482,12 @@
   padding-top: 60px;
   padding-bottom: 100px;
   height: 160px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 860px){
+  p.desc{
+    font-size: 12px;
   }
 }
 
