--- a/sub/assets/css/sub_common.css
+++ b/sub/assets/css/sub_common.css
@@ -1,5 +1,5 @@
 *{margin: 0; padding: 0;}
-ul, li{list-style: none;}
+ul, li{list-style: none; padding: 0; margin: 0;}
 a{text-decoration: none; color: #000;}
 
 @font-face {
@@ -151,7 +151,7 @@ p.desc{
 .main_menu .menu_gnb li {
   margin-right: 70px;
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .main_menu .menu_gnb li:last-child {
@@ -208,7 +208,7 @@ p.desc{
     align-items: center;
     font-size: 16px;
   }
-
+  
   #ghost_menu {
     display: none;
   }
@@ -257,25 +257,28 @@ p.desc{
     transform: translateY(-50%) rotate(-45deg);
   }
 
-.main_menu .ghost_list {
+  .main_menu .ghost_list {
     display: flex;
     flex-direction: column;
     background: #fff;
     position: absolute;
-    right: -320px;
+    right: -1000px;
     top: 64px;
-    width: 300px;
+    width: 50%;
     height: calc(100vh - 44px);
     z-index: 100;
     transition: all 0.5s;
+    padding: 44px 0 0 20px;
+    text-align: left;
   }
 
   .main_menu .ghost_list ul {
-    margin-top: 100px;
+    font-size: 20px;
+    font-weight: 700;
   }
 
   .main_menu .ghost_list ul li {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
   }
 
     .main_menu .ghost_list li a:hover {
@@ -301,6 +304,18 @@ p.desc{
     animation-fill-mode: forwards;
   }
 
+  .main_menu .ghost_list .ghost_info_wrap {
+    margin-top: 20px;
+  }
+
+  .main_menu .ghost_list .ghost_info_wrap .info_list_box {
+    margin-bottom: 25px;
+    font-size: 14px;
+  }
+
+  .main_menu .ghost_list .ghost_info_wrap .info_list_box .info_list {
+    color: #666666;
+  }
 }
 
 /* footer */
