--- a/sub/assets/css/sub_common.css
+++ b/sub/assets/css/sub_common.css
@@ -1,6 +1,7 @@
 *{margin: 0; padding: 0;}
 ul, li{list-style: none; padding: 0; margin: 0;}
 a{text-decoration: none; color: #000;}
+p{margin-bottom: 0;}
 
 @font-face {
   font-family: "NanumSquareRound";
